fix: address PR review findings and CI toolchain